[package]
edition = "2024"
name = "pfs"
version = "0.1.0"

[features]
poem = ["poem-openapi"]

[lints.rust]
missing_docs = { level = "warn" }
rust-2024-compatibility = { level = "warn" }
unsafe_code = { level = "warn" }

[dependencies]
async-fs = { version = "2.2.0" }
chrono = { version = "0.4.41" }
poem-openapi = { version = "5.1.16", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "rt-multi-thread"] }
