[package]
authors = ["Vikram Auradkar <vikram.auradkar@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "pfs"
rust-version = "1.91.1"
version = "0.2.0"

[features]
poem = ["poem-openapi"]
test_utils = ["async-walkdir", "similar", "tempdir"]

[lints.rust]
missing_docs = { level = "warn" }
rust-2024-compatibility = { level = "warn" }
unsafe_code = { level = "warn" }

[dependencies]
async-fs = { version = "2.2.0" }
async-recursion = { version = "1.1.1" }
async-walkdir = { version = "2.1.0", optional = true }
chrono = { version = "0.4.41" }
futures-lite = { version = "2.6.1" }
log = { version = "0.4.27" }
lru = { version = "0.16.2" }
poem-openapi = { version = "5.1.16", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = { version = "0.10.9" }
similar = { version = "2.7.0", optional = true }
tempdir = { version = "0.3.7", optional = true }
thiserror = { version = "2.0.16" }
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }

[dev-dependencies]
pfs = { path = ".", features = ["test_utils"] }
