[package]
authors = ["Vikram Auradkar <vikram.auradkar@gmail.com>"]
description = "A portable, crass-platform, serializable representation of contained file system"
edition = "2024"
homepage = "https://github.com/vauradkar/pfs"
keywords = ["cross-platform", "filesystem", "portable", "serialization", "virtual-fs"]
license = "MIT OR Apache-2.0"
name = "pfs"
readme = "README.md"
repository = "https://github.com/vauradkar/pfs"
version = "0.2.0"

[features]
json_schema = ["schemars"]
poem = ["poem-openapi"]
test_utils = ["async-walkdir", "similar", "tempdir"]
utoipa = ["dep:utoipa"]

[lints.rust]
missing_docs = { level = "warn" }
rust-2024-compatibility = { level = "warn" }
unsafe_code = { level = "warn" }

[dependencies]
async-fs = { version = "2.2.0" }
async-recursion = { version = "1.1.1" }
async-walkdir = { version = "2.1.0", optional = true }
chrono = { version = "0.4.41" }
derivative = "2.2.0"
futures-lite = { version = "2.6.1" }
log = { version = "0.4.27" }
lru = { version = "0.16.2" }
poem-openapi = { version = "5.1.16", optional = true }
schemars = { version = "0.9.0", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = { version = "0.10.9" }
similar = { version = "2.7.0", optional = true }
tempdir = { version = "0.3.7", optional = true }
thiserror = { version = "2.0.16" }
utoipa = { version = "5.4.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.47.1", features = ["macros"] }

[dev-dependencies]
pfs = { path = ".", features = ["test_utils"] }
serde_json = { version = "1.0.145" }
tokio-test = "0.4.4"
